# MCS-PCR

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Makefile  PCL1.13.0_release_x64.props  README.md  TopologicalConsistencyRegis.vcxproj  TopologicalConsistencyRegis.vcxproj.filters  analyze_results.py  batch_run.py  evaluate_registration_v3.py  yaml0.8.0_release_x64
configs/: Apartment.yaml  Boardroom.yaml  Campus.yaml  Park.yaml  RESSO_6i.yaml  RESSO_7a.yaml
datasets/: download.sh
datasets/example/: ground_truth.txt  source.ply  target.ply
examples/: example.cpp  test_dataset.cpp
include/: Graph.h  Hough.h  LineDetection.h  LoopRegistration2D.h  Projection.h  Registration.h  Utils.h  ZEstimation.h
source/: Graph.cpp  LineDetection.cpp  LoopRegistration2D.cpp  Projection.cpp  Registration.cpp  Utils.cpp  ZEstimation.cpp  main.cpp
